# OrionFlow_CAD

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .gitignore  BEFORE_AFTER_COMPARISON.md  CADAM_CONTRIBUTION_PROPOSAL.md  CADAM_CONTRIBUTION_README.md  CLAUDE.md  CONTRIBUTION_SUMMARY.txt  Claude.md  Dockerfile  FINAL_SUMMARY.md  Frontend.md  HOW_TO_CREATE_PR.md  INDEX.md  Makefile  README.md  alembic.ini  build123d_dir.txt  check_build123d.py  check_constraints.py  check_key.py  check_sig.py  check_submod.py  dataset.json  debug_geometry.py  debug_output.txt  debug_param_log.txt  debug_repro.py  debug_trace.py  debug_validators.py  docker-compose.dev.yml  docker-compose.yml  dump_dir.py  fly.toml  generate_500_deepcad.py  generate_part.py  live_test.ipynb  onshape_test_output.txt  (+13 more)
alembic/: env.py
orion_agent/: __init__.py  pyproject.toml
orion_agent/addon/: InitGui.py  __init__.py  assembly_compiler.py  bridge_server.py  capabilities.py  chat_panel.py  freecad_headless.py  harness_launcher.py  orion_workbench.py  package.xml  task_queue.py
orion_agent/evals/: __init__.py  generate_suite.py  harness.py  modify_suite.py  query_suite.py  run.py  synthetic.py
orion_agent/harness/: __init__.py  assembly_graph.py  assembly_spec.py  assembly_validation.py  bridge_client.py  context.py  design_rules.py  exemplars.py  featuregraph.py  flywheel.py  mechanical_knowledge.py  memory.py  nasa_rules.py  observability.py  robotics_assembly.py  robotics_knowledge.py  server.py  spec.py  standards.py  topology.py  trajectory_logger.py  urdf_export.py
(+791 files in other folders)
