[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-agent"
version = "0.1.0"
description = "OrionFlow agent harness — an AI CAD copilot embedded in FreeCAD"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
harness = [
    "build123d>=0.5.0",
    "trimesh>=4.0",
    "numpy>=1.26",
    "pillow>=10.0",
]
eval = [
    "pytest>=8.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

# The addon half (orion_agent.addon) runs inside FreeCAD's embedded Python and
# is intentionally stdlib-only: it must not require any of the above.

[project.scripts]
orion-harness = "orion_agent.harness.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orion_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"
